# music-catalogue

./: .gitignore  Caddyfile  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  go.mod  main.go
backend/internal/albumdetector/: client.go  handler.go  handler_test.go  models.go
backend/internal/coverartarchive/: client.go  handler.go
backend/internal/musicbrainz/: client.go  handler.go
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: albums.ts  client.ts  import.ts  search.ts
frontend/src/components/: AlbumCard.tsx  AlbumForm.tsx  ConfirmDialog.tsx  ErrorBoundary.tsx  FilterWidget.tsx  Layout.tsx  RecordPlaceholder.tsx  SearchCard.tsx  SearchForm.tsx  SkeletonCard.tsx  Toast.tsx
frontend/src/config/: import.ts
frontend/src/db/: albums.ts  init.d.ts  init.ts  worker.ts
frontend/src/pages/: AlbumsPage.tsx  HomePage.tsx  ImportPage.tsx  SearchPage.tsx
frontend/src/test/: AlbumCard.test.tsx  AlbumForm.test.tsx  AlbumsPage.test.tsx  App.test.tsx  ConfirmDialog.test.tsx  ErrorBoundary.test.tsx  FilterWidget.test.tsx  (+9 more)
services/album-detector/: .dockerignore  Dockerfile  detect_video.py  main.py  pyproject.toml
services/album-detector/src/album_detector/: album_detector.py  app.py  deduplicator.py  grid_detector.py  models.py  text_extractor.py  video_sampler.py
services/album-detector/tests/: test_album_detector.py  test_app.py  test_deduplicator.py  test_grid_detector.py  test_text_extractor.py  test_video_sampler.py
(+4 files in other folders)
